<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1">
    <TextView
        android:id="@+id/tvBody"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:text="@string/str_what_to_do"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#252525" />
    <TextView
        android:id="@+id/tvPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_item_priority"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:textColor="#252525" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_time"
        android:id="@+id/tvDue"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center|right"
        android:textColor="#252525" />

</LinearLayout>